--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -83,10 +83,17 @@
                         <div class="col">
                             <h5><a href="/about">About</a></h5>
                             <ul class="list-unstyled text-small">
-                            	<li><a href="<%= locals.whoami.html_url %>">GitHub App</a></li>
-                                <li><a href="https://github.com/twodayslate/swift-package-registry/">GitHub Repository</a></li>
                                 <li><a href="https://twitter.com/twodayslate">Twitter</a></li>
                                 <li><a href="https://zac.gorak.us">zac.gorak.us</a></li>
+                            </ul>
+                        </div>
+
+                        <div class="col">
+                            <h5>GitHub</h5>
+                            <ul class="list-unstyled text-small">
+                                <li><a href="https://github.com/marketplace/swift-package-registry">GitHub MarketPlace</a>
+                                <li><a href="<%= locals.whoami.html_url %>">GitHub App</a></li>
+                                <li><a href="https://github.com/twodayslate/swift-package-registry/">GitHub Repository</a></li>
                             </ul>
                         </div>
 
