Display fork status and some bug fixes

--- a/views/package.ejs
+++ b/views/package.ejs
@@ -33,6 +33,16 @@
 				<pre><%= package.error %></pre>
 			</div>
 		<% } %>
+		<% if (package.info && package.info.fork) { %>
+			<div class="alert alert-info" role="alert">
+				<h2>Forked Pacakge</h2>
+				This repository is a fork of another repository. You might be more interested in the parent.
+
+				<a class="btn btn-block btn-social btn-github my-3" href="<%=package.info.parent.html_url %>">
+	    			<span class="fa fa-github"></span> <%= package.info.parent.full_name %>
+	 			</a>
+			</div>
+		<% } %>
 			<div class="jumbotron py-3">
 				<div class="row">
 					<div class="col">
