--- a/views/index.ejs
+++ b/views/index.ejs
@@ -54,7 +54,7 @@
 </div>
 <div class="col-sm-4">
 	<h2>Recently Added</h2>
-	<ul class="list-group list-group-flush">
+	<ul class="list-group list-group-flush mb-3">
 	  <% recently_created_packages.forEach(function(package){ %>
 		<li class="list-group-item d-flex justify-content-between align-items-center">
 			<a href="/<%= package.info.full_name %>">
