Fixed spelling mistake

--- a/views/package.ejs
+++ b/views/package.ejs
@@ -35,7 +35,7 @@
 		<% } %>
 		<% if (package.info && package.info.fork) { %>
 			<div class="alert alert-info" role="alert">
-				<h2>Forked Pacakge</h2>
+				<h2>Forked Package</h2>
 				This repository is a fork of another repository. You might be more interested in <a href="/<%= package.info.parent.full_name %>">the parent</a>.
 
 				<a class="btn btn-block btn-social btn-github my-3" href="<%=package.info.parent.html_url %>">
