Update website to show Action

--- a/views/add.ejs
+++ b/views/add.ejs
@@ -3,7 +3,7 @@
         <h2 class="display-4">GitHub App Support</h2>
         <p class="lead">Add and update your Swift packages automatically by adding the <a href="/"><%= whoami.name %></a> <a href="<%= whoami.html_url %>">GitHub App</a> to your repository!</p>
           <hr class="my-4">
-          <p>Swift Packages can be added manually or when added via the <a href="/"><%= whoami.name %></a> <a href="<%= whoami.html_url %>">GitHub App</a>. Swift Packages are updated automatically when a new release is published.</p>
+          <p>Swift Packages can be added manually, via the <a href="https://github.com/marketplace/actions/swift-package-registry">GitHub Action</a>, or when added via the <a href="/"><%= whoami.name %></a> <a href="<%= whoami.html_url %>">GitHub App</a>. If using the GitHub App, Swift Packages are updated automatically when a new release is published.</p>
           <a class="btn btn-primary btn-lg" href="<%= whoami.html_url %>/installations/new/permissions?target_id=<%= whoami.owner.id %>"" role="button">Add GitHub App</a>
     </div>
 
