--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -92,6 +92,7 @@
                             <ul class="list-unstyled text-small">
                                 <li><a href="https://github.com/marketplace/swift-package-registry">GitHub MarketPlace</a>
                                 <li><a href="<%= locals.whoami.html_url %>">GitHub App</a></li>
+                                <li><a href="https://github.com/marketplace/actions/swift-package-registry">GitHub Action</a></li>
                                 <li><a href="https://github.com/twodayslate/swift-package-registry/">GitHub Repository</a></li>
                             </ul>
                         </div>
