--- a/views/add.ejs
+++ b/views/add.ejs
@@ -4,7 +4,7 @@
         <p class="lead">Add and update your Swift packages automatically by adding the <a href="/"><%= whoami.name %></a> <a href="<%= whoami.html_url %>">GitHub App</a> to your repository!</p>
           <hr class="my-4">
           <p>Swift Packages can be added manually, via the <a href="https://github.com/marketplace/actions/swift-package-registry">GitHub Action</a>, or when added via the <a href="/"><%= whoami.name %></a> <a href="<%= whoami.html_url %>">GitHub App</a>. If using the GitHub App, Swift Packages are updated automatically when a new release is published.</p>
-          <a class="btn btn-primary btn-lg" href="<%= whoami.html_url %>/installations/new/permissions?target_id=<%= whoami.owner.id %>"" role="button">Add GitHub App</a>
+          <a class="btn btn-primary btn-lg" href="<%= whoami.html_url %>/installations/new/permissions?target_id=<%= whoami.owner.id %>" role="button">Add GitHub App</a>
     </div>
 
     <h2>Add a Swift package</h2>
