Add view all packages from author

--- a/views/package.ejs
+++ b/views/package.ejs
@@ -157,6 +157,8 @@
 
 					<button type="button" class="btn btn-link" data-toggle="modal" data-target=".bd-dump-modal">View Package</button>
 
+					<a href="/<%= package.info.owner.login %>" class="btn btn-link">View More Packages from this Author</a>
+
 					<div class="modal fade bd-dump-modal" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
 					  <div class="modal-dialog modal-xl" role="document">
 						<div class="modal-content">
