--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,5 +1,5 @@
-<div class="container">
-<h2>404</h2>
+<div class="container text-center">
+<h2 class="text-danger">404</h2>
 
 <% if (locals.flash && flash.warning) { %>
 	<div class="alert alert-warning alert-dismissible fade show" role="alert">
@@ -10,13 +10,19 @@
     </div>
 <% } %>
 
-Unable to find <samp><%= req.url %></samp>
+<% if (noExist){ %>
+    <p><strong><%=noExist %></strong></p>
+<% } %>
 
+Unable to find <strong><samp><%= req.url %></strong></samp>
 <% if (locals.flash && flash.err_message) { %>
 	<pre><%= flash.err_message %></pre>
 <% } %>
+
 <% if (locals.flash && flash.err) { %>
 	<pre><%= JSON.stringify(flash.err) %></pre>
 <% } %>
+
+
 
 </div>
