Support advanced search

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,6 +19,7 @@
     	</span>
     </input>
     </div>
+    <small class="form-text text-muted">Advanced Search Example: networking cache, "image pipeline", tag:swiftui OR tag:network, -beta</small>
 </form>
 
 <div class="row">
