--- a/views/search.ejs
+++ b/views/search.ejs
@@ -17,6 +17,7 @@
     			<li><code>-beta</code> exclude a term</li>
     			<li><code>stars:>500</code> minimum star count</li>
     			<li><code>after:2024-01-01</code> last commit after a date</li>
+    			<li><code>processing:false</code> exclude packages still being indexed</li>
     		</ul>
     	</div>
     </details>
